<resources>
    <string name="app_name">FitFoody</string>
    <string name="emailFormatWrong">Wrong Email Format</string>
    <string name="emailRegistered">Email is already registered</string>
    <string name="passwordLess">Password must be longer than 8 Character</string>
    <string name="tvLogin">Login</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="register">Dont Have an Account?\n</string>
    <string name="register_button">Register</string>
    <string name="nameEmpty">Please fill out your name</string>
    <string name="tvRegister">Register</string>
    <string name="name">Enter your name</string>
    <string name="imageSplashDesc">Application Logo</string>
    <string name="fooddesc">Nasi Lemak</string>
    <string name="tv_food_name">Food Name</string>
    <string name="tv_food_nutrition">Food nutrition</string>
    <string name="tvNutrition">Your Nutrition Today</string>
    <string name="tvTotCalorie">Total Calorie :</string>
    <string name="tvTotCalorieNumber">Total</string>
    <string name="tvCarbs">Carbs :</string>
    <string name="tvCarbsNumber">Carbs</string>
    <string name="tvNutFacs">Nutrition Facts</string>
    <string name="tvProtein">Proteins :</string>
    <string name="tvProteinNumber">Proteins</string>
    <string name="tvFat">Fats :</string>
    <string name="tvFatNumber">Fats</string>
    <string name="tvHistory">History</string>
    <string name="not_found">Not Found</string>
    <string name="btnFloating">Image Input</string>
    <string name="gallery">Gallery</string>
    <string name="picture">Camera</string>
    <string name="analyze">Analyze</string>
    <string name="enterImage">Capture Your Meal for Nutritional Info!</string>
    <string name="result">Here\'s your food Nutrition Facts</string>
    <string name="empty_image_warning">Image cannot be empty</string>
    <string name="passwordNotMatch">Password did not Match</string>
    <string name="image_classifier_failed">Image cannot be classified</string>
</resources>